--- a/Styles/app.css
+++ b/Styles/app.css
@@ -25,7 +25,7 @@ a{
 
 */
 .app-btn{
-    width:10.9rem;
+    width:14.1rem;
     height: 4.8rem;
     border-radius: 2.8rem;
     -webkit-border-radius: 2.8rem;
@@ -37,6 +37,7 @@ a{
     align-items: center;
     justify-content: center;
     font-family: "Poppins Medium";
+    font-size:1.4rem;
     background-color: var(--primary-color);
 }
 
@@ -189,7 +190,7 @@ align-items: center;
 gap:2rem;
 }
 .header__btn{
-    font-size:1.4rem;
+    
 }
 .header__btn-play{
     width:5.6rem;
@@ -361,4 +362,85 @@ font-weight: 600;
 .how-it-work__item-text{
 max-width:20rem;
 text-align: center;
+}
+
+/* 
+===========================
+  section course-features
+===========================
+
+*/
+.course-features{
+position: relative;
+background: linear-gradient(152deg,rgba(250, 246, 230, 1) 44%, rgba(229, 236, 255, 1) 63%);
+padding-bottom: 25rem;
+padding-top:10rem;
+}
+.course-features__wrapper{
+    width:80%;
+    margin:0 auto;
+    display: flex;
+    align-items: center;
+    gap:4rem;
+}
+.course-features__image{
+max-width:46%;
+z-index:9;
+}
+.course-features__image img{
+width:100%;
+}
+.course-features__content{
+
+}
+.course-features__title{
+max-width: 54rem;
+font-family: "Poppins SemiBold";
+font-size: 4.5rem;
+line-height: 5.5rem;
+}
+.course-features__text{
+max-width: 54rem;
+margin-top:1rem;
+}
+.course-features__items{
+display: flex;
+align-items: center;
+gap:4rem;
+margin:3rem 0;
+}
+.course-features__items-wrapper{
+display: flex;
+flex-direction: column;
+gap:2rem;
+}
+.course-features__item{
+display: flex;
+align-items: center;
+gap:1rem;
+}
+.course-features__item-check{
+    width:2.4rem;
+    height: 2.4rem;
+    border-radius:100%;
+    -webkit-border-radius:100%;
+    -moz-border-radius:100%;
+    -ms-border-radius:100%;
+    -o-border-radius:100%;
+    background-color: var(--primary-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.course-features__item-check-icon{
+
+}
+.course-features__item-name{
+font-weight: 600;
+}
+.course-features__shape{
+position: absolute;
+top:0;
+left:69px;
+/* z-index: -1; */
 }
