add section job-position

--- a/Styles/app.css
+++ b/Styles/app.css
@@ -373,8 +373,7 @@ text-align: center;
 .course-features{
 position: relative;
 background: linear-gradient(152deg,rgba(250, 246, 230, 1) 44%, rgba(229, 236, 255, 1) 63%);
-padding-bottom: 25rem;
-padding-top:10rem;
+padding:10rem 0 9rem 0;
 }
 .course-features__wrapper{
     width:80%;
@@ -440,7 +439,57 @@ font-weight: 600;
 }
 .course-features__shape{
 position: absolute;
-top:0;
-left:69px;
+top:110px;
+left:104px;
 /* z-index: -1; */
+}
+/* 
+
+===========================
+  section course-features
+===========================
+
+*/
+.job-position{
+    background-color: rgba(39, 66, 77, 1);
+    padding:4rem 0;
+}
+.job-position__wrapper{
+display: flex;
+align-self: center;
+justify-content: center;
+gap:6rem;
+}
+.job-position__content{
+    width:48.5rem;
+    background-color: #fff;
+    border-radius:1.6rem;
+    -webkit-border-radius:1.6rem;
+    -moz-border-radius:1.6rem;
+    -ms-border-radius:1.6rem;
+    -o-border-radius:1.6rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:1rem;
+    padding:2rem;
+}
+.job-position__image{
+    width:40%;
+}
+.job-position__image img{
+width:100%;
+}
+.job-position__description{
+
+}
+.job-position__title{
+font-family: "Poppins Medium";
+font-weight: 600;
+font-size: 2.4rem;
+line-height: 3.2rem;
+}
+.job-position__text{
+color: rgba(189, 189, 189, 1);
+margin:1rem 0 2rem 0;
 }
