--- a/Styles/responsive.css
+++ b/Styles/responsive.css
@@ -1,8 +1,16 @@
 @media screen and (max-width:1400px){
     
 }
+@media screen and (min-width:1400px){
+    .course-quality__wrapper{
+      gap:25rem;
+    }
+}
 @media screen and (max-width:1200px){
-    
+    .course-quality__title{
+      font-size: 3.5rem;
+      line-height: 4.5rem;
+    }
 }
 @media screen and (max-width:992px){
 .header-references img{
@@ -51,6 +59,24 @@ line-height: 1.4rem;
 .how-it-work__item-text{
   font-size: 1.2rem;
 }
+.course-quality__video{
+  width:50%;
+}
+.course-quality__play-btn{
+  width:90px;
+  height: 90px;
+  top:159px;
+}
+.course-quality__image{
+  width:100%;
+}
+.course-quality__content{
+  max-width:30rem;
+}
+.course-quality__title{
+  font-size: 2.5rem;
+  line-height: 3.5rem;
+}
 }
 @media screen and (max-width:768px){
   .header__links{
@@ -84,7 +110,6 @@ line-height: 1.4rem;
   .header__image{
     width:28rem;
 }
-}
 .how-it-work__wrapper{
     max-width:28rem;
     height: 28rem;
@@ -115,6 +140,21 @@ line-height: 1rem;
 }
 .how-it-work__item:nth-child(5){
    left:-128px;
+}
+.course-quality__wrapper{
+  flex-wrap: wrap-reverse;
+}
+.course-quality__content{
+  max-width:100%;
+}
+.course-quality__video,
+.course-quality__content{
+width:100%;
+}
+.course-quality__title{
+  font-size: 3.5rem;
+  line-height: 4.5rem;
+}
 }
 @media screen and (max-width:576px){
 .header-references img{
