--- a/Styles/app.css
+++ b/Styles/app.css
@@ -40,6 +40,23 @@ a{
     font-size:1.4rem;
     background-color: var(--primary-color);
 }
+/* 
+
+--Helper Class
+
+*/
+.full-width{
+    width: 100%;
+}
+.align-items-center{
+    align-items: center;
+}
+.bgc-white{
+    background-color: #fff;
+}
+.text-color{
+    color:var(--text-color);
+}
 
 /* 
 
@@ -572,7 +589,7 @@ margin-top: 11rem;
 
 .student-comments{
 background-color:rgba(255, 248, 225, 1);
-padding:4rem 0;
+padding:4rem 0 14rem 0;
 }
 .student-comments__header{
 display: flex;
@@ -637,4 +654,125 @@ top:13px;
 }
 .student-comment__content{
 
+}
+/* 
+
+Footer
+
+*/
+
+.footer{
+padding:16rem 0 2rem 0;
+position: relative;
+}
+.footer__wrapper{
+display: flex;
+align-items: center;
+}
+/* 
+===========================
+        section-left
+===========================
+*/
+.footer__section-left{
+
+}
+.footer__social-media{
+   width:93.56px;
+   display:flex;
+   justify-content: space-between;
+   align-items: center;
+}
+.footer__social-media-img{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width:2.4rem;
+    height: 2.4rem;
+    border:1px solid var(--text-color);
+    border-radius: 100%;
+    -webkit-border-radius: 100%;
+    -moz-border-radius: 100%;
+    -ms-border-radius: 100%;
+    -o-border-radius: 100%;
+}
+.footer__social-media-img img{
+    
+}
+/* 
+===========================
+       section-right
+===========================
+*/
+.footer__section-right{
+display: flex;
+justify-content: space-between;
+}
+.footer__menu{
+
+}
+.footer__menu__title{
+font-weight:700;
+font-size:1.8rem;
+line-height:2.8rem;
+margin-top:2rem;
+
+}
+.footer-nav{
+color: var(--text-color);
+}
+.footer-nav__item{
+
+}
+.footer-nav__link{
+color: inherit;
+opacity: 0.6;
+}
+/* 
+===========================
+  section-investing-box
+===========================
+*/
+.investing-box{
+    width:91.5rem;
+    border-radius:20rem;
+    -webkit-border-radius:20rem;
+    -moz-border-radius:20rem;
+    -ms-border-radius:20rem;
+    -o-border-radius:20rem;
+    background-color: var(--primary-color);
+    margin:0 auto;
+    padding:2rem 0;
+    display: flex;
+    flex-direction: column;
+    gap:4rem;
+    align-items: center;
+    color:#fff;
+    position: absolute;
+    top:-112px;
+    left:0;
+    right:0;
+}
+.investing-box__title{
+font-family: "Poppins SemiBold";
+font-size: 4rem;
+line-height: 5rem;
+text-align: center;
+max-width: 60%;
+}
+.investing-box__btn{
+    width:14.1rem;
+    height: 4.8rem;
+    border-radius: 2.8rem;
+    -webkit-border-radius: 2.8rem;
+    -moz-border-radius: 2.8rem;
+    -ms-border-radius: 2.8rem;
+    -o-border-radius: 2.8rem;
+    color:var(--text-color);
+    font-family: "Poppins Medium";
+    font-size:1.4rem;
+    background-color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
